--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ env/
 venv/
 /env
 
-
 # Database
 *.sqlite3
 db.sqlite3
@@ -18,9 +17,12 @@ db.sqlite3
 
 # IDEs and Editors
 .idea/
+.idea
+/.idea
 .vscode/
 
 # OS-generated files
 .DS_Store
-DS_Store
+/.DS_Store
+.DS_Store/
 Thumbs.db
